--- a/style.css
+++ b/style.css
@@ -359,7 +359,7 @@ h2 {
   overflow: hidden;
 }
 /*       CITY TOUR        */ 
-.tour-header {
+.tour-header-Rio {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("https://www.melhoresdestinos.com.br/wp-content/uploads/2019/08/rio-de-janeiro-capa2019-01-820x430.jpg");
   background-size: cover;
